# uv-workspace-packaging-example

./: .gitignore  LICENSE  README.md  pyproject.toml
app0/: pyproject.toml
app0/src/my_app0/: __init__.py
commonlib/: pyproject.toml
commonlib/src/my_commonlib/: __init__.py
