[project]
name = "my-commonlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kit Lee", email = "7000003+wingkitlee0@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
